initial sample data

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -36,7 +36,7 @@ $list-bg-color:#ebecf0;
     border-bottom-left-radius: $colum-boder-radius;
     border-bottom-right-radius: $colum-boder-radius;
   }
-  ul.task-list{
+  ul.card-list{
     list-style-type: none;
     margin: 0;
     max-height: calc(100% - #{$column-header-height} - #{$column-footer-height});
