Imlement Drag and Drop, eslint

--- a/src/_setting.scss
+++ b/src/_setting.scss
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?familySource+Sans+Pro:wght@400;600");
 
 $gap: 10px;
-
+//Height: appbar+boardbar+boardContent=99vh 1vh cho scroll bar
+$navbar-app-height:4vh;
+$navbar-board-height:5vh;
+$board-content-height:90vh;
 //colors
 $board-bg-color:#0079bf;
 $common-element-bg:rgba(255, 255, 255, .24);
